@@ -12,6 +12,7 @@ acct_mgr-0.3.1 (not yet released) - branch 0.11
  * #8963: Restore compatibility with Trac 0.11 - holding 10 different issues
  * further improve redirect loop protection (infinite loop after /login)
  * add more verbose error log messages for missing/unreadable password file
+ * remove duplicated message in Trac 0.11 at account details admin page
 
 
 acct_mgr-0.3 (07.07.2011) - branch 0.11
